@@ -3,6 +3,7 @@
 - The ability for the stub to launch any script during the unpacking of application files has been removed. This feature was not in use.
 - The exit code from the Ruby application is now returned when the stub is terminated.
 - The packed data no longer contains redundant directory information.
+- Fixed errors in the --debug option.
 
 === 1.3.15
 - Support for Ruby 2.6 and above.
